<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.example.android.inventoryapp.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/edittext_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/product_name_hint"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/edittext_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:hint="@string/product_price_hint"
                    android:inputType="number"
                    android:maxLength="6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_quantity"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/decrement_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/skyBlue"
                        android:padding="8dp"
                        android:text="@string/quantity_decrement"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edittext_product_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:gravity="center"
                        android:hint="@string/product_quantity_hint"
                        android:inputType="number"
                        android:maxLength="6"
                        android:nextFocusDown="@id/edittext_product_name" />

                    <TextView
                        android:id="@+id/increment_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/skyBlue"
                        android:padding="8dp"
                        android:text="@string/quantity_increment"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/product_image"
                    android:textAllCaps="true" />

                <ImageView
                    android:id="@+id/product_edit_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/skyBlue" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/order_text_view"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edittext_order_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/order_amount_hint"
                android:inputType="number"
                android:maxLength="6"
                android:text="@string/order_default_value"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/textview_send_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@color/beigeOrange"
                android:padding="8dp"
                android:text="@string/order_button"
                android:textAllCaps="true"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
